--- a/04_cli_telegram_weather/package.json
+++ b/04_cli_telegram_weather/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yaroslav Osmukha",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
