--- a/auth_api/.env.example
+++ b/auth_api/.env.example
@@ -7,6 +7,7 @@ PORT=
 # Private Key for Access Token And Refresh Token
 ACCESS_TOKEN_PRIVATE_KEY=
 REFRESH_TOKEN_PRIVATE_KEY=
+ACCESS_TOKEN_TTL=
 
 # Database
 DB_NAME=
