--- a/auth_api/package.json
+++ b/auth_api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "09_auth_api",
+  "name": "auth_api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple REST API using the Express framework. The essence of the API is to register and authorize users using JWT tokens.",
+  "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js"
   },
