--- a/auth_api/package.json
+++ b/auth_api/package.json
@@ -4,7 +4,8 @@
   "description": "A simple REST API using the Express framework. The essence of the API is to register and authorize users using JWT tokens.",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon --env-file=.env src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,6 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
