--- a/json_storage/package.json
+++ b/json_storage/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0"
   }
 }
